--- a/app/src/main/res/layout/activity_post_result.xml
+++ b/app/src/main/res/layout/activity_post_result.xml
@@ -3,18 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/locationName"
-        android:hint="Name of Location" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit Rating"
-        android:id="@+id/ratingSubmit"
+        android:text="Large Text"
+        android:id="@+id/response"
         android:layout_gravity="center_horizontal" />
-
 </LinearLayout>
