--- a/app/src/main/res/layout/activity_post_result.xml
+++ b/app/src/main/res/layout/activity_post_result.xml
@@ -3,11 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/response"
-        android:layout_gravity="center_horizontal" />
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
 </LinearLayout>
