--- a/app/src/main/res/layout/activity_ratings.xml
+++ b/app/src/main/res/layout/activity_ratings.xml
@@ -19,7 +19,7 @@
             android:orientation="horizontal"
             android:layout_weight="1"
             android:id="@+id/buttonPanel"
-            android:visibility="visible">
+            android:visibility="gone">
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
