--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,4 +6,17 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cs246.bathroom.MapsActivity" />
+    tools:context="com.cs246.bathroom.MapsActivity" >
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/add_location_button_name"
+            android:textAlignment="center"
+            android:id="@+id/addLocation"
+            android:layout_gravity="bottom"
+            android:visibility="gone"
+            android:padding="0dp"
+            android:background="@color/colorAccent"/>
+
+</fragment>
