--- a/app/src/main/res/layout/activity_ratings.xml
+++ b/app/src/main/res/layout/activity_ratings.xml
@@ -4,27 +4,23 @@
     android:layout_width="match_parent"
     android:id="@+id/coordinateLayout"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        ></include>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <include layout="@layout/activity_maps"
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="7"/>
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:id="@+id/buttonPanel"
-            android:visibility="gone">
-            <Button
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <include layout="@layout/activity_maps"
+                android:id="@+id/map"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/add_location_button_name"
-                android:id="@+id/addLocation"/>
+                android:layout_height="0dp"
+                android:layout_weight="7"/>
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
