--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FF74828F</color>
-    <color name="colorPrimaryDark">#566069</color>
+    <color name="colorPrimaryDark">#9e423d</color>
     <color name="colorAccent">#c25b56</color>
 </resources>
